# ImageConvolutionKernels

./: CMakeLists.txt  README.md  main.cpp  readme.md
Source/Core/Channel/: Channel.cpp  Channel.h
Source/Core/ConvolutionKernel/: ConvolutionKernel.cpp  ConvolutionKernel.h
Source/Core/ConvolutionKernel/Kernels/: AverageKernel.cpp  GaussianKernel.cpp  Identity.cpp
Source/Core/Image/: Image.cpp  Image.h
Source/Core/Image/ImageFormats/: NetpbmImage.cpp  NetpbmImage.h  PPMImage.cpp  PPMImage.h
Source/Core/Image/ImageFormats/Header/: NetpbmHeader.cpp  NetpbmHeader.h  NetpmbHeader.cpp  NetpmbHeader.h
Source/Core/Image/ImageFormats/PGM/: PGMImage.cpp  PGMImage.h
Source/Core/Image/ImageFormats/PPM/: PPMImage.cpp  PPMImage.h
Source/Core/Matrix/: Matrix.cpp  Matrix.h
Source/Core/MatrixPaddingStrategy/: MatrixPaddingStrategy.h
Source/Core/MatrixPaddingStrategy/PeriodicExtensionMatrixPaddingStrategy/: PeriodicExtensionMatrixPaddingStrategy.cpp  PeriodicExtensionMatrixPaddingStrategy.h
Source/Core/MatrixPaddingStrategy/Zero Padding/: ZeroPaddingMatrixPaddingStrategy.cpp  ZeroPaddingMatrixPaddingStrategy.h
Source/Core/Utils/: FileUtils.cpp  FileUtils.h
Testing/Image/: testConvolutionKernel.cpp  testImage.cpp  testImageChannels.cpp
Testing/Matrix/: testMatrix.cpp  testMatrixPadding.cpp
